 2003-07-30 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp, skstream/skserver.h, skstream/skstream.cpp,
      skstream/skstream.h, skstream/skstream_unix.h: Move virtual
      function implementations into .cpp files.
 2003-07-25 Al Riddoch <alriddoch@zepler.org>
    - Don't build or run the unit tests if CppUnit is not found.
 2003-07-24 Al Riddoch <alriddoch@zepler.org>
    - Add a more complex test for closesocket for mingw32.
 2003-07-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h: Fix header for windows build.
 2003-07-23 James Turner <james@worldforge.org>
    - Comitting long-standing ProjectBuilder file updates, 
      builds a nice skstream.framework under OS-X. Can also
      build the 'ping' demo, though that has issues generally.
 2003-07-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstreamconfig.h.pbx, skstream/skstreamconfig.h.in,
      skstream/skstreamconfig.h.windows: Removed some defines which
      are the same on all platforms, and put them in the main header.
      Avoid streambuf header as it varies on some systems, and rely
      on iostream instead.
    - Remove the streambuf header test.
    - skstream/skstream.h: Remove the old platform specific code,
      take on some changes from the skstreamconfig header, and clean
      up some comments.
    - skstream/skstream.cpp: Re-write the resolver code for platforms
      without getaddrinfo() so it is cleaner, and covers more cases.
 2003-07-03 Al Riddoch <alriddoch@zepler.org>
    - Update rpm spec to be cleaner, and make the technical sections
      more generic.
 2003-06-23 Al Riddoch <alriddoch@zepler.org>
    - Update Makefile.ams so distcheck works.
 2003-05-06 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp, skstream_unix.h:
      Re-work basic_socket_stream so it can have either stream or datagram
      buffers.
    - ping/ping.cpp, ping/ping.h, test/basicskstreamtest.h,