@@ -22,8 +22,6 @@
 
 #include <skstream/skstream.h>
 
-#include <sys/un.h>
-
 /////////////////////////////////////////////////////////////////////////////
 // class unix_socket_stream
 /////////////////////////////////////////////////////////////////////////////
