@@ -1,3 +1,13 @@
+ 2003-08-08 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skstream.cpp, skstream/skstream_unix.h: Include skstream
+      header with its fully qualified name for compatability, and move
+      the unix system header out of the header into the cpp file.
+    - skstream/skserver.cpp, skstream/skserver.h: Add new base class for ip
+      socket types, and put in the ip address related functionality into it,
+      so basic class can be used as a base for unix socket class.  Move
+      can_accept() into the base class as it applies to any listen socket.
+    - skstream/skserver_unix.h, skstream/skserver.cpp: Add a class for
+      unix listen sockets.
  2003-07-30 Al Riddoch <alriddoch@zepler.org>
     - skstream/skserver.cpp, skstream/skserver.h, skstream/skstream.cpp,
       skstream/skstream.h, skstream/skstream_unix.h: Move virtual
